; ModuleID = '/home/carl/AnghaBench/tmux/extr_tty.c_tty_region_pane.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_tty.c_tty_region_pane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i32 }
%struct.tty_ctx = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tty*, %struct.tty_ctx*, i64, i64)* @tty_region_pane to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tty_region_pane(%struct.tty* %0, %struct.tty_ctx* %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.tty*, align 8
  %6 = alloca %struct.tty_ctx*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.tty* %0, %struct.tty** %5, align 8
  store %struct.tty_ctx* %1, %struct.tty_ctx** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.tty*, %struct.tty** %5, align 8
  %10 = load %struct.tty_ctx*, %struct.tty_ctx** %6, align 8
  %11 = getelementptr inbounds %struct.tty_ctx, %struct.tty_ctx* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %7, align 8
  %14 = add nsw i64 %12, %13
  %15 = load %struct.tty_ctx*, %struct.tty_ctx** %6, align 8
  %16 = getelementptr inbounds %struct.tty_ctx, %struct.tty_ctx* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = sub nsw i64 %14, %17
  %19 = load %struct.tty_ctx*, %struct.tty_ctx** %6, align 8
  %20 = getelementptr inbounds %struct.tty_ctx, %struct.tty_ctx* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* %8, align 8
  %23 = add nsw i64 %21, %22
  %24 = load %struct.tty_ctx*, %struct.tty_ctx** %6, align 8
  %25 = getelementptr inbounds %struct.tty_ctx, %struct.tty_ctx* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = sub nsw i64 %23, %26
  %28 = call i32 @tty_region(%struct.tty* %9, i64 %18, i64 %27)
  ret void
}

declare dso_local i32 @tty_region(%struct.tty*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
